Added tests and new userservice implementation. Added begining of react UI elements. Refactored to api and web directories

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
+/web/dist
 /tmp
 /out-tsc
+
+# test data
+/db/data
 
 # Runtime data
 pids
