--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "A Simple node.js api",
   "scripts": {
-    "start": "pm2 start src/server.js --watch --interpreter babel-node",
-    "stop": "pm2 stop src/server.js",
-    "restart": "pm2 restart src/server.js",
-    "test": "jest src/test",
-    "build": "babel src —-out-dir dist"
+    "start": "npm-run-all --parallel server:run client:build",
+    "server:run": "nodemon --exec babel-node src/api/server.js",
+    "client:build": "webpack --mode production --watch",
+    "debug": "nodemon --inspect --exec babel-node src/api/server.js",
+    "test": "jest",
+    "build": ""
   },
   "author": "Greg Smith",
   "license": "MIT",
@@ -16,31 +17,41 @@
     "@babel/node": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.4",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
-    "webpack": "^4.23.1",
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "lodash": "^4.17.11",
+    "fastest-validator": "^0.6.12",
     "moment": "^2.22.2",
+    "nedb": "^1.8.0",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-router-dom": "^4.3.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.4",
     "eslint": "^5.7.0",
     "eslint-plugin-react": "^7.11.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
-    "nodemon": "^1.18.4",
+    "nodemon": "^1.18.6",
+    "npm-run-all": "^4.1.3",
+    "pm2": "^3.2.2",
     "regenerator-runtime": "^0.12.1",
-    "webpack-cli": "^3.1.2",
-    "pm2": "^3.2.2"
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2"
   },
   "jest": {
     "verbose": true,
-    "watchPathIgnorePatterns": ["node_modules", "db/data"]
+    "watchPathIgnorePatterns": [
+      "node_modules",
+      "api/db/data"
+    ]
   }
 }
