added repo url to package.json

--- a/package.json
+++ b/package.json
@@ -53,5 +53,9 @@
       "node_modules",
       "api/db/data"
     ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gregjsmith/hx-api"
   }
 }
