--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "client:build": "webpack --mode production --watch",
     "debug": "nodemon --inspect --exec babel-node src/api/server.js",
     "test": "jest",
-    "build": ""
+    "lint": ""
   },
   "author": "Greg Smith",
   "license": "MIT",
@@ -35,7 +35,10 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
-    "eslint": "^5.7.0",
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
