--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,8 @@
     "implicit-arrow-linebreak": 0,
     "class-methods-use-this": 0,
     "no-shadow": 1,
-    "import/no-named-as-default-member": 0
+    "import/no-named-as-default-member": 0,
+    "comma-dangle": 0
   },
   "extends": ["airbnb-base"]
 }
